# flowstate

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Justfile  LICENSE  README.md  rust-toolchain.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.md  config.yml  feature_request.yml  governance-change.yml
.github/workflows/: ci.yml
client/: .gitkeep
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: input_buffer.rs  lib.rs  session.rs  validation.rs
crates/sim/: Cargo.toml
crates/wire/: Cargo.toml
docs/: constitution.md  delivery-path.md  handbook.md  repo-map.md  vision.md
docs/adr/: 0000-adr-template.md  0001-authoritative-multiplayer-architecture.md  0001-three-plane-architecture.md  0002-deterministic-simulation.md  0003-fixed-timestep-simulation.md  0004-server-authoritative-architecture.md  0005-v0-networking-architecture.md  0006-input-tick-targeting.md  0007-state-digest-algorithm-canonical-serialization.md
docs/constitution/: acceptance-kill.md  domain-model.md  id-catalog.json  id-index-by-tag.md  id-index.md  id-system.md  invariants.md  scope-non-goals.md  tag-taxonomy.md
docs/impl/: FS-0007-gates.md  FS-0007-plan.md
docs/licensing/: third-party.md
docs/networking/: v0-parameters.md
docs/specs/: FS-0007-v0-multiplayer-slice.md  FS-TBD-v0-multiplayer-slice.md  (+2 more)
scripts/: constitution_ids.py  pr_trace.py  spec_lint.py
(+2 files in other folders)
