[package]
name = "flowstate-server"
version = "0.0.0"
edition = "2024"
publish = false
description = "Server Edge for Flowstate multiplayer"

[dependencies]
flowstate-sim = { path = "../sim" }
flowstate-wire = { path = "../wire" }
flowstate-replay = { path = "../replay" }
prost = "0.14"

[dev-dependencies]

[lints.rust]
unsafe_code = "deny"
